=== master

* Support autoforme_framework Roda class method in Roda plugin, to allow for reflection (jeremyevans)

* Omit invalid Next/Previous links instead of including them in a tag with a disabled attribute (jeremyevans)

* Support pagination via filtering instead of offset using pagination_strategy :filter (requires unambiguous order) (jeremyevans)

=== 1.13.0 (2024-07-10)

* Typecast primary key values before using them for lookup (jeremyevans)

* Support colon for model names to allow easier use of namespaced models (adam12) (#46)

=== 1.12.0 (2022-06-29)

* Handle autocomplete queries with an empty query by returning empty string (jeremyevans)

* Switch autocomplete support to depend on Pixabay/JavaScript-autoComplete (jeremyevans)

* Make autoforme.js file no longer require JQuery (jeremyevans)

* Make navigation tab li tag use nav-item, for Bootstrap 5 compatibility (jeremyevans)

=== 1.11.0 (2021-11-30)

* Require forme 2.0.0 (jeremyevans)

* Add support for view_options framework option (nmb, jeremyevans) (#42)

* Drop support for Ruby 1.8 (jeremyevans)

=== 1.10.0 (2021-08-27)

* Do not consider read_only many_to_many associations to be editable (jeremyevans)

* Ignore unique constraint violations when adding associated objects in mtm_update (jeremyevans)

* Handle search fields that cannot be typecast correctly by returning no results (jeremyevans)

=== 1.9.1 (2019-07-22)

* [SECURITY] Escape object display name when displaying association links (adam12)

=== 1.9.0 (2018-07-18)

* Add support for using flash string keys in the Roda support, to work with Roda's sessions plugin (jeremyevans)

* Show correct page title on error pages (jeremyevans)

=== 1.8.0 (2018-06-11)

* Add support for Roda route_csrf plugin for request-specific CSRF tokens (jeremyevans)

* Default to size of 10 for select multiple inputs (jeremyevans)

=== 1.7.0 (2017-10-27)

* Respect Model#forme_namespace method for parameter names (adam12, jeremyevans) (#9)
