@@ -36,7 +36,7 @@ module AutoForme
 
     opts_attribute :after_create, :after_destroy, :after_update, :association_links,
       :autocomplete_options, :before_action, :before_create, :before_destroy,
-      :before_edit, :before_new, :before_update, :column_options,
+      :before_edit, :before_new, :before_update, :column_options, :column_search_filter,
       :columns, :display_name, :filter, :form_attributes, :form_options,
       :inline_mtm_associations, :lazy_load_association_links, :pagination_strategy,
       :model_type, :mtm_associations, :order, :page_footer, :page_header, :per_page,
@@ -116,6 +116,10 @@ module AutoForme
 
     def association_links_for(model, type, request)
       handle_proc(association_links, model, type, request)
+    end
+
+    def column_search_filter_for(model, dataset, column, value, request)
+      handle_proc(column_search_filter, model, dataset, column, value, request)
     end
 
     def pagination_strategy_for(model, type, request)
